// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ResetStatusModal should match snapshot 1`] = `
<ConfirmModal
  cancelButtonText=""
  checkboxText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Do not ask me again"
      id="modal.manual_status.ask"
    />
  }
  confirmButtonClass="btn btn-primary"
  confirmButtonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Set status to \\"Online\\""
      id="modal.manual_status.button_online"
    />
  }
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Would you like to switch your status to \\"Online\\"?"
      id="modal.manual_status.message_online"
    />
  }
  modalClass=""
  onCancel={[Function]}
  onConfirm={[Function]}
  show={false}
  showCheckbox={true}
  title=""
/>
`;

exports[`components/ResetStatusModal should match snapshot, render modal for OOF status 1`] = `
<ConfirmModal
  cancelButtonText=""
  checkboxText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Do not ask me again"
      id="modal.manual_status.ask"
    />
  }
  confirmButtonClass="btn btn-primary"
  confirmButtonText={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Set status to \\"Online\\""
      id="modal.manual_status.button_online"
    />
  }
  message={
    <Memo(MemoizedFormattedMessage)
      defaultMessage="Would you like to switch your status to \\"Online\\" and disable automatic replies?"
      id="modal.manual_status.auto_responder.message_online"
    />
  }
  modalClass=""
  onCancel={[Function]}
  onConfirm={[Function]}
  show={false}
  showCheckbox={false}
  title=""
/>
`;
